# transcripy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-14-poetry-install-readme.md
docs/superpowers/specs/: 2026-04-14-poetry-install-readme-design.md
transcripy/: audio2voices.py  audioPreprocessing.py  cli.py  shellMenu.py
