[project]
name = "transcripy"
version = "0.1.0"
description = "Local multi-speaker audio transcription"
authors = [{name = "Charles Martin"}]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "pyannote.audio",
    "torch>=2.8,<3.0",
    "torchaudio>=2.8,<3.0",
    "lightning>=2.4,<3.0",
    "pyannote.audio>=4.0,<5.0",
    "demucs",
    "tqdm",
    "pydub",
    "plotly",
    "mutagen",
    "pycaption",
    "colour",
    "colorama",
    "numpy",
    "scipy",
    "console-menu",
]

[project.scripts]
transcripy = "transcripy.cli:main"

[tool.poetry]
packages = [{include = "transcripy"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
